# rubiks-cube

./: .gitignore  .python-version  Cargo.toml  Makefile
benches/: turn_bench.py  turn_bench.rs
env/: env.py  turn_bench.py
src/: cube.rs  cubies.rs  errors.rs  lib.rs  main.rs  moves.rs  orientation.rs  permutation.rs  pyo3.rs
src/orientation/: corner_orientation.rs  edge_orientation.rs  mod.rs
src/sets/: corner_orientation.rs  edge_orientation.rs  faces.rs  mod.rs
train/: env.py  scrambler.py
