[package]
name = "rubikscube"
version = "0.1.0"
edition = "2018"

[lib]
name = "rubikscube"
crate-type = ["cdylib", "rlib"]



[dependencies]
fixedbitset = "0.4.1"
rand = "0.8"
strum = "0.24"
strum_macros = "0.24"

# python
pyo3 = { version = "0.16.3", features = ["extension-module"], optional = true }


[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "turn_bench"
harness = false

[features]
python = ["pyo3"]

[profile.release]
lto = true
opt-level = 3
panic="abort"
