[package]
name = "rubikscube"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8.5"}
strum = "0.24"
strum_macros = "0.24"

# wasm


wasm-bindgen = {version = "0.2.80", optional = true}
js-sys = {version = "0.3.57", optional = true}
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }


[dependencies.web-sys]
version = "0.3.57"
optional = true
features = [
    'Document',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'MouseEvent',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window',
]


[dev-dependencies]
criterion = "0.3"
wasm-bindgen-test = "0.3.13"

[[bench]]
name = "turn_bench"
harness = false

[features]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook",
"wee_alloc", "getrandom"]
