[package]
name = "rubikscube"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8.5"}
strum = "0.24"
strum_macros = "0.24"



[dev-dependencies]
criterion = "0.3"
wasm-bindgen-test = "0.3.13"

[[bench]]
name = "turn_bench"
harness = false

